paint; prevent forum heading from overlapping course banner

--- a/src/main/resources/scss/debris/forums/components/_forums.scss
+++ b/src/main/resources/scss/debris/forums/components/_forums.scss
@@ -66,7 +66,7 @@ $indent: 0.9375rem;
 		padding: 0.5rem 1rem;
 		color: white;
 		display: block;
-		margin:  #{-$indent} #{-$indent} 0;
+		margin:  0 #{-$indent} 0;
 	}
 
 	.breadcrumbs,
